--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "authors": [
     {
       "name": "Spikkl",
-      "email": "support@spikkl.com"
+      "email": "support@spikkl.nl"
     }
   ],
   "keywords": [
@@ -18,9 +18,9 @@
     "client"
   ],
   "require": {
-    "ext-json": "*",
     "php": "^7.1.3 | ^7.2",
-    "illuminate/support": "^5.8.0 | ^6.0",
+    "ext-json": "*",
+    "illuminate/support": "^5.8.0 | ^6.0 | ^7.0 | ^8.0",
     "spikkl/spikkl-php-client": "^1.1"
   },
   "require-dev": {
