--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
     "client"
   ],
   "require": {
-    "php": "^7.1.3 | ^7.2",
+    "php": "^7.2 | ^8.0",
     "ext-json": "*",
-    "illuminate/support": "^5.8.0 | ^6.0 | ^7.0 | ^8.0",
+    "illuminate/support": "^6.0 | ^7.0 | ^8.0",
     "spikkl/spikkl-php-client": "^1.1"
   },
   "require-dev": {
-    "graham-campbell/testbench": "^4.0|^5.0",
+    "graham-campbell/testbench": "^5.5",
     "mockery/mockery": "^1.0",
     "phpunit/phpunit": "^7.5 | ^8.0"
   },
